<resources>
    <string name="_20k">₦20000</string>
    <string name="_process">Process</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_deletion">Account Deletion</string>
    <string name="account_id">Account Id</string>
    <string name="account_name">Account Name</string>
    <string name="account_transfer_note">Please note that you might not be notified of this payment immediately, but you can always verify the status of the transaction on the transactions page on your dashboard.</string>
    <string name="account_type_place_holder">Account Type:   %1$s</string>
    <string name="address">Address</string>
    <string name="all">All</string>
    <string name="all_password_mismatch">Password Mismatch</string>
    <string name="all_please_enter_amount">Please Enter Amount</string>
    <string name="all_please_enter_business_name">Please Enter Business Name</string>
    <string name="all_please_enter_confirm_password">Please re-enter your password</string>
    <string name="all_please_enter_contact_person">Please Enter your Contact Person</string>
    <string name="all_please_enter_email_address">Please Enter your Email address</string>
    <string name="all_please_enter_first_name">Please Enter First Name</string>
    <string name="all_please_enter_full_name">Please Enter Full Name</string>
    <string name="all_please_enter_last_name">Please Enter Last Name</string>
    <string name="all_please_enter_location">Please Enter Your Location</string>
    <string name="all_please_enter_no_of_tids">Please Enter your Number of TIDs</string>
    <string name="all_please_enter_password">Please Enter Password</string>
    <string name="all_please_enter_phone_number">Please Enter your Phone Number</string>
    <string name="all_please_enter_rc_no">Please Enter RC Number</string>
    <string name="amount">AMOUNT</string>
    <string name="amount_empty">"Amount can't be empty"</string>
    <string name="amount_place_holder">Amount:   %1$S</string>
    <string name="an_error_occurred">An error occurred please try again</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_logo">App Logo</string>
    <string name="app_name">FCMB EasyPay</string>
    <string name="app_uploaded_successfully">App uploaded successfully! Restarting the app in 5 seconds!</string>
    <string name="app_version_place_holder">App Version:   %1$s</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approved">Approved</string>
    <string name="approved_transactions">Approved Transactions</string>
    <string name="are_you_an_existing_customer">Are you an existing customer?</string>
    <string name="auth_code_place_holder">AUTH CODE:   %1$s</string>
    <string name="bank_verification_number_bvn">Bank Verification Number (BVN)</string>
    <string name="beneficiaryAccountNumber"><b>Beneficiary Account Number:</b> %s</string>
    <string name="bill_package">Package</string>
    <string name="bills">BILLS</string>
    <string name="bonus_account">Bonus Account</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="btn_cal_0">0</string>
    <string name="btn_cal_00">00</string>
    <string name="btn_cal_1">1</string>
    <string name="btn_cal_2">2</string>
    <string name="btn_cal_3">3</string>
    <string name="btn_cal_4">4</string>
    <string name="btn_cal_5">5</string>
    <string name="btn_cal_6">6</string>
    <string name="btn_cal_7">7</string>
    <string name="btn_cal_8">8</string>
    <string name="btn_cal_9">9</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_esc">Esc</string>
    <string name="business_address">Business Location/Address</string>
    <string name="business_name">Business Name</string>
    <string name="bvn">Bank Verification Number</string>
    <string name="call_notification_answer_action">Answer</string>
    <string name="call_notification_answer_video_action">Video</string>
    <string name="call_notification_decline_action">Decline</string>
    <string name="call_notification_hang_up_action">Hang Up</string>
    <string name="call_notification_incoming_text">Incoming call</string>
    <string name="call_notification_ongoing_text">Ongoing call</string>
    <string name="call_notification_screening_text">Screening an incoming call</string>
    <string name="camera_perm_rationale">You need to allow access permissions before you can scan the QR inorder for the customer to make the payment</string>
    <string name="cancel">cancel</string>
    <string name="card_holder_place_holder">Card Holder:   %1$s</string>
    <string name="card_masked_pan">Masked Pan: %1$s</string>
    <string name="card_owner_place_holder">Card Owner: %1$s</string>
    <string name="card_type_place_holder">Card Type:   %1$s</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="close">close</string>
    <string name="close_dialog">close dialog</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="completion">Completion</string>
    <string name="confirm_mobile_number">Confirm Mobile Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="contact_customer_care_for_support">Contact Customer Care for support</string>
    <string name="contact_info">Contact Information</string>
    <string name="contact_person">"Contact Person's Number"</string>
    <string name="contact_us">Contact Us:</string>
    <string name="copy">Copy</string>
    <string name="createdAt"><b>Created At:</b> %s</string>
    <string name="credit">Credit</string>
    <string name="current">Current</string>
    <string name="customer">Customer</string>
    <string name="customerCopy">CUSTOMER COPY</string>
    <string name="cvv_cannot_be_empty">"CVV can't be empty"</string>
    <string name="cvv_too_short">CVV is not complete</string>
    <string name="daily">Daily</string>
    <string name="date_time_place_holder">DATE/TIME: %1$s</string>
    <string name="expiry_date">EXPIRY DATE: **/**</string>
    <string name="investment_account">Investment Account</string>
    <string name="is_cutomers_copy_place_holder">*** %1$s ***</string>
    <string name="masked_pan_place_holder">Masked Pan:   %1$s</string>
    <string name="merchant_name_place_holder">Merchant:   %1$s</string>
    <string name="message_place_holder">Message:   %1$s</string>
    <string name="netplus_logo">Netplus Logo</string>
    <string name="pos_purchase">POS PURCHASE</string>
    <string name="powered_by_netplus">Powered by NetPlus</string>
    <string name="purchase">PURCHASE</string>
    <string name="receipt_footer_message">"4, Hakeem Dickson Drive, Off TF, Kuboye Street, Oniru, Lagos 
Email: info@netplusdotcom.com 
Tel: +234 818 778 2542, +234 809 999 0660"</string>
    <string name="response_code_place_holder">Response Code:   %1$s</string>
    <string name="rrn_place_holder">RRN:   %1$s</string>
    <string name="savings">Savings</string>
    <string name="select_account_type">Select Account Type</string>
    <string name="stan_place_holder">STAN:   %1$s</string>
    <string name="terminal_id_place_holder">Terminal Id:   %1$s</string>
    <string name="trans_ref_place_holder">TRANS REF:   %1$s</string>
    <string name="transaction_receipt">Transaction Receipt</string>
    <string name="transaction_status_place_holder">TRANSACTION   %1$s</string>
    <string name="universal_account">Universal Account</string>
</resources>