<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/layout_pos_receipt_pdf_0" android:background="@drawable/transaction_receipt_bg" android:paddingTop="@dimen/dimen_20dp" android:paddingBottom="@dimen/dimen_10dp" android:layout_width="fill_parent" android:layout_height="fill_parent" android:paddingHorizontal="@dimen/dimen_20dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView" android:layout_width="90.0dip" android:layout_height="@dimen/dimen_50dp" android:scaleType="centerCrop" android:contentDescription="@string/app_logo" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_netpos_logo" />
    <TextView android:textSize="@dimen/dimen_20sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/transaction_receipt" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/imageView" app:layout_constraintTop_toBottomOf="@id/imageView" />
    <View android:id="@id/view2" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_1dp" android:layout_marginTop="@dimen/dimen_10dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/merchant_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/merchant_name_place_holder" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/view2" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/terminal_id_place_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/terminal_id_place_holder" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/merchant_name" />
    <TextView android:textSize="@dimen/dimen_20sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/pos_purchase" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="@id/title" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toBottomOf="@id/terminal_id_place_holder" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/date_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/date_time_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/textView5" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:id="@id/trans_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/amount_place_holder" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/date_time" app:layout_constraintTop_toBottomOf="@id/date_time" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/rrn" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/rrn_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/trans_amount" app:layout_constraintTop_toBottomOf="@id/trans_amount" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/stan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/stan_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/rrn" app:layout_constraintTop_toBottomOf="@id/rrn" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/card_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/card_owner_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/stan" app:layout_constraintTop_toBottomOf="@id/stan" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/masked_pan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/card_masked_pan" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/card_holder" app:layout_constraintTop_toBottomOf="@id/card_holder" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/card_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/card_type_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/masked_pan" app:layout_constraintTop_toBottomOf="@id/masked_pan" />
    <TextView android:textSize="@dimen/dimen_20sp" android:textStyle="bold" android:textColor="@color/colorPrimary" android:id="@id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/transaction_status_place_holder" android:textAllCaps="true" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/card_type" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/response_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/response_code_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/card_holder" app:layout_constraintTop_toBottomOf="@id/status" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/message_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/response_code" app:layout_constraintTop_toBottomOf="@id/response_code" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/app_version_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/message" app:layout_constraintTop_toBottomOf="@id/message" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:textColor="@color/colorAccent" android:id="@id/powered_by" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/powered_by_netplus" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="@id/app_version" app:layout_constraintTop_toBottomOf="@id/app_version" />
    <View android:id="@id/view3" android:background="@color/colorAccent" android:layout_width="fill_parent" android:layout_height="@dimen/dimen_1dp" android:layout_marginTop="@dimen/dimen_10dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/powered_by" />
    <TextView android:textSize="@dimen/dimen_18sp" android:textColor="@color/colorPrimary" android:id="@id/textView3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/contact_us" android:fontFamily="@font/poppins_medium" app:layout_constraintStart_toStartOf="@id/view3" app:layout_constraintTop_toBottomOf="@id/view3" />
    <TextView android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/receipt_footer_message" android:layout_marginVertical="@dimen/dimen_5dp" app:layout_constraintStart_toStartOf="@id/textView3" app:layout_constraintTop_toBottomOf="@id/textView3" />
    <ImageView android:id="@id/imageView2" android:layout_width="@dimen/dimen_120dp" android:layout_height="@dimen/dimen_50dp" android:layout_marginTop="@dimen/dimen_10dp" android:contentDescription="@string/netplus_logo" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/textView4" app:layout_constraintVertical_bias="0.0" app:srcCompat="@drawable/ic_netpos_new" />
</androidx.constraintlayout.widget.ConstraintLayout>
