<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/layout_receipt_pdf_0" android:padding="@dimen/dimen_20dp" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/imageView" android:layout_width="@dimen/dimen_50dp" android:layout_height="@dimen/dimen_50dp" android:contentDescription="@string/app_logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/ic_netpos_logo" />
    <TextView android:textSize="@dimen/dimen_18sp" android:textStyle="bold" android:id="@id/title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="@id/imageView" app:layout_constraintStart_toStartOf="@id/imageView" app:layout_constraintTop_toBottomOf="@id/imageView" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/terminal_id_place_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/terminal_id_place_holder" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/title" />
    <TextView android:textSize="@dimen/dimen_18sp" android:textStyle="bold" android:id="@id/textView5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/purchase" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="@id/title" app:layout_constraintStart_toStartOf="@id/title" app:layout_constraintTop_toBottomOf="@id/terminal_id_place_holder" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:id="@id/stan" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/stan_place_holder" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/terminal_id_place_holder" app:layout_constraintTop_toBottomOf="@id/textView5" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/date_time" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/date_time_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/stan" app:layout_constraintTop_toBottomOf="@id/stan" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:id="@id/trans_amount" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/amount_place_holder" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/date_time" app:layout_constraintTop_toBottomOf="@id/date_time" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/order_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/trans_ref_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/trans_amount" app:layout_constraintTop_toBottomOf="@id/trans_amount" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/account_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/account_type_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/order_id" app:layout_constraintTop_toBottomOf="@id/order_id" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/card_type" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/card_type_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/account_type" app:layout_constraintTop_toBottomOf="@id/account_type" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/trans_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/masked_pan_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/card_type" app:layout_constraintTop_toBottomOf="@id/card_type" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/card_holder" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/card_holder_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/trans_id" app:layout_constraintTop_toBottomOf="@id/trans_id" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/card_expiration" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/expiry_date" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/card_holder" app:layout_constraintTop_toBottomOf="@id/card_holder" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/auth_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/auth_code_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/card_expiration" app:layout_constraintTop_toBottomOf="@id/card_expiration" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:id="@id/status" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:textAllCaps="true" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/auth_code" app:layout_constraintTop_toBottomOf="@id/auth_code" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/response_code" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/response_code_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/auth_code" app:layout_constraintTop_toBottomOf="@id/status" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/message" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/message_place_holder" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/response_code" app:layout_constraintTop_toBottomOf="@id/response_code" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/message" app:layout_constraintTop_toBottomOf="@id/message" />
    <TextView android:textSize="@dimen/dimen_16sp" android:id="@id/powered_by" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/powered_by_netplus" android:fontFamily="@font/poppins_medium" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/app_version" app:layout_constraintTop_toBottomOf="@id/app_version" />
    <TextView android:textSize="@dimen/dimen_16sp" android:textStyle="bold" android:id="@id/isCustomersCopy" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10dp" android:text="@string/is_cutomers_copy_place_holder" android:fontFamily="@font/poppins_bold" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/powered_by" app:layout_constraintTop_toBottomOf="@id/powered_by" />
</androidx.constraintlayout.widget.ConstraintLayout>
